--- a/admin-panel/public/index.html
+++ b/admin-panel/public/index.html
@@ -9,11 +9,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="eBazar Admin Panel - Complete CRUD Operations for E-commerce Management"
+      content="Vizidot Admin Panel - Complete CRUD Operations for E-commerce Management"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>eBazar Admin Panel</title>
+    <title>Vizidot Admin Panel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
